--- a/Notebooks/Notebook.ipynb
+++ b/Notebooks/Notebook.ipynb
@@ -60,49 +60,49 @@
    ],
    "source": [
     "# Infosys 2020-2021\n",
-    "infosys_20_21_index_dir = \"./storage/infosys-20-21\"\n",
+    "infosys_20_21_index_dir = \"./index_storage/infosys-20-21\"\n",
     "infosys_20_21_docs = [\"./Assignment_dataset/infosys-20-21.pdf\"]\n",
     "infosys_20_21_index = manager.load_or_build_index(infosys_20_21_index_dir, infosys_20_21_docs)\n",
     "\n",
     "# Infosys 2021-2022\n",
-    "infosys_21_22_index_dir = \"./storage/infosys-21-22\"\n",
+    "infosys_21_22_index_dir = \"./index_storage/infosys-21-22\"\n",
     "infosys_21_22_docs = [\"./Assignment_dataset/infosys-21-22.pdf\"]\n",
     "infosys_21_22_index = manager.load_or_build_index(infosys_21_22_index_dir, infosys_21_22_docs)\n",
     "\n",
     "# Infosys 2022-2023\n",
-    "infosys_22_23_index_dir = \"./storage/infosys-22-23\"\n",
+    "infosys_22_23_index_dir = \"./index_storage/infosys-22-23\"\n",
     "infosys_22_23_docs = [\"./Assignment_dataset/infosys-22-23.pdf\"]\n",
     "infosys_22_23_index = manager.load_or_build_index(infosys_22_23_index_dir, infosys_22_23_docs)\n",
     "\n",
     "\n",
     "# TCS 2020-2021\n",
-    "tcs_20_21_index_dir = \"./storage/tcs-20-21\"\n",
+    "tcs_20_21_index_dir = \"./index_storage/tcs-20-21\"\n",
     "tcs_20_21_docs = [\"./Assignment_dataset/tcs-20-21.pdf\"]\n",
     "tcs_20_21_index = manager.load_or_build_index(tcs_20_21_index_dir, tcs_20_21_docs)\n",
     "\n",
     "# TCS 2021-2022\n",
-    "tcs_21_22_index_dir = \"./storage/tcs-21-22\"\n",
+    "tcs_21_22_index_dir = \"./index_storage/tcs-21-22\"\n",
     "tcs_21_22_docs = [\"./Assignment_dataset/tcs-21-22.pdf\"]\n",
     "tcs_21_22_index = manager.load_or_build_index(tcs_21_22_index_dir, tcs_21_22_docs)\n",
     "\n",
     "# TCS 2022-2023\n",
-    "tcs_22_23_index_dir = \"./storage/tcs-22-23\"\n",
+    "tcs_22_23_index_dir = \"./index_storage/tcs-22-23\"\n",
     "tcs_22_23_docs = [\"./Assignment_dataset/tcs-22-23.pdf\"]\n",
     "tcs_22_23_index = manager.load_or_build_index(tcs_22_23_index_dir, tcs_22_23_docs)\n",
     "\n",
     "\n",
     "# Wipro 2020-2021\n",
-    "wipro_20_21_index_dir = \"./storage/wipro-20-21\"\n",
+    "wipro_20_21_index_dir = \"./index_storage/wipro-20-21\"\n",
     "wipro_20_21_docs = [\"./Assignment_dataset/wipro-20-21.pdf\"]\n",
     "wipro_20_21_index = manager.load_or_build_index(wipro_20_21_index_dir, wipro_20_21_docs)\n",
     "\n",
     "# Wipro 2021-2022\n",
-    "wipro_21_22_index_dir = \"./storage/wipro-21-22\"\n",
+    "wipro_21_22_index_dir = \"./index_storage/wipro-21-22\"\n",
     "wipro_21_22_docs = [\"./Assignment_dataset/wipro-21-22.pdf\"]\n",
     "wipro_21_22_index = manager.load_or_build_index(wipro_21_22_index_dir, wipro_21_22_docs)\n",
     "\n",
     "# Wipro 2022-2023\n",
-    "wipro_22_23_index_dir = \"./storage/wipro-22-23\"\n",
+    "wipro_22_23_index_dir = \"./index_storage/wipro-22-23\"\n",
     "wipro_22_23_docs = [\"./Assignment_dataset/wipro-22-23.pdf\"]\n",
     "wipro_22_23_index = manager.load_or_build_index(wipro_22_23_index_dir, wipro_22_23_docs)\n"
    ]
